ajout modale + photos + suppression photos

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,6 +37,19 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		
+		<dialog>
+			<div class="stop">
+			  <a class="close-button">
+				<i class="fa-solid fa-xmark"></i>
+			  </a>
+			  <h1 class="modal-title">Galerie photo</h1>
+			  <section class="modal-gallery"></section>
+			  <hr />
+			  <a class="link-add-pics">Ajouter une photo</a>
+			</div>
+		  </dialog>
+		  
 		<div class="filters">
 			<button data-categoryid="0">Tous</button>
 		</div>
@@ -56,6 +69,8 @@
 			<input type="submit" value="Envoyer">
 		</form>
 	</section>
+
+
 </main>
 
 <footer>
